--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -640,6 +640,49 @@ Regular Block Hosting {% endblock %} {% block content %}
               {% endfor %}
             </tbody>
           </table>
+
+          <!-- Pagination Controls -->
+          <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+              {% if pagination.has_prev %}
+              <li class="page-item">
+                <a
+                  class="page-link"
+                  href="{{ url_for('main.host', page=pagination.current_page - 1, active_tab='block_members') }}"
+                >
+                  Previous
+                </a>
+              </li>
+              {% else %}
+              <li class="page-item disabled">
+                <span class="page-link">Previous</span>
+              </li>
+              {% endif %} {% for page in range(1, pagination.total_pages + 1) %}
+              <li
+                class="page-item {% if page == pagination.current_page %}active{% endif %}"
+              >
+                <a
+                  class="page-link"
+                  href="{{ url_for('main.host', page=page, active_tab='block_members') }}"
+                  >{{ page }}</a
+                >
+              </li>
+              {% endfor %} {% if pagination.has_next %}
+              <li class="page-item">
+                <a
+                  class="page-link"
+                  href="{{ url_for('main.host', page=pagination.current_page + 1, active_tab='block_members') }}"
+                >
+                  Next
+                </a>
+              </li>
+              {% else %}
+              <li class="page-item disabled">
+                <span class="page-link">Next</span>
+              </li>
+              {% endif %}
+            </ul>
+          </nav>
         </div>
 
         <!--/ Block Members -->
