--- a/app/templates/block_reports.html
+++ b/app/templates/block_reports.html
@@ -254,6 +254,39 @@ block content %}
               {% endfor %}
             </tbody>
           </table>
+
+          <!-- Pagination Controls -->
+          <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+              {% if pagination.has_prev %}
+              <li class="page-item">
+                <a class="page-link" href="{{ url_for('main.block_reports', page=pagination.current_page - 1,active_tab='member_contribution') }}">
+                  Previous
+                </a>
+              </li>
+              {% else %}
+              <li class="page-item disabled">
+                <span class="page-link">Previous</span>
+              </li>
+              {% endif %}
+              {% for page in range(1, pagination.total_pages + 1) %}
+              <li class="page-item {% if page == pagination.current_page %}active{% endif %}">
+                <a class="page-link" href="{{ url_for('main.block_reports', page=page,active_tab='member_contribution') }}">{{ page }}</a>
+              </li>
+              {% endfor %}
+              {% if pagination.has_next %}
+              <li class="page-item">
+                <a class="page-link" href="{{ url_for('main.block_reports', page=pagination.current_page + 1,active_tab='member_contribution') }}">
+                  Next
+                </a>
+              </li>
+              {% else %}
+              <li class="page-item disabled">
+                <span class="page-link">Next</span>
+              </li>
+              {% endif %}
+            </ul>
+          </nav>
         </div>
         <!-- /Member Contribution -->
 
