--- a/app/templates/statistics.html
+++ b/app/templates/statistics.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %} {% block heading %}
-      Welcome back, {{ current_user.full_name }}
-{% endblock %} {% block content %}
+{% extends "base.html" %} {% block heading %} Welcome back, {{
+current_user.full_name }} {% endblock %} {% block content %}
 <main class="temp-5-body">
   <!-- Dashboard Content -->
   <div class="dashboard">
@@ -29,17 +28,16 @@
         </div>
         <div class="col-lg-3 col-md-6 mb-3">
           <a
-          href="{{url_for('main.view_all_blocks')}}"
-          style="text-decoration: none"
-        >
-          
-          <div
-            class="glass-card stats-card text-dark"
-            style="background-color: #f9e79f18"
+            href="{{url_for('main.view_all_blocks')}}"
+            style="text-decoration: none"
           >
-            <p>Total Number of Blocks</p>
-            <h2>{{total_blocks}}</h2>
-          </div>
+            <div
+              class="glass-card stats-card text-dark"
+              style="background-color: #f9e79f18"
+            >
+              <p>Total Number of Blocks</p>
+              <h2>{{total_blocks}}</h2>
+            </div>
           </a>
         </div>
         <div class="col-lg-3 col-md-6 mb-3">
@@ -57,7 +55,7 @@
             style="background-color: #f3b9b249"
           >
             <p>Members Yet to Host</p>
-            <h2>{{members_to_host}}</h2>
+            <h2>{{yet_to_host}}</h2>
           </div>
         </div>
       </div>
