Error handling on contributions

--- a/app/templates/block_reports.html
+++ b/app/templates/block_reports.html
@@ -59,16 +59,16 @@ block content %}
             </h4>
             <div class="flex-container mt-4">
               <div class="row">
-                <div class="col-md-3">
-                  <!-- For Cascade dropdown - AJAX -->
+
+                <!-- <div class="col-md-3">
                   <select id="block-filter" name="block" class="form-control">
                     <option value="">-- Select Block --</option>
                     {% for block in blocks %}
-                    <!-- For Cascade dropdown - AJAX -->
+
                     <option value="{{ block.id }}">{{ block.name }}</option>
                     {% endfor %}
                   </select>
-                </div>
+                </div> -->
 
                  <div class="col-md-3">
                   <!-- For Cascade dropdown - AJAX -->
